syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Streamfair/streamfair_user_svc/pb";

message User {
     int64                     id = 1;
     string                    username = 2;
     string                    full_name = 3;
     string                    email = 4;
     string                    country_code = 5;
     int64                     role_id = 6;
     string                    status = 7;
     google.protobuf.Timestamp last_login_at = 8;
     google.protobuf.Timestamp username_changed_at = 9;
     google.protobuf.Timestamp email_changed_at = 10;
     google.protobuf.Timestamp password_changed_at = 11;
     google.protobuf.Timestamp created_at = 12;
     google.protobuf.Timestamp updated_at = 13;
}